[package]
name = "jackson-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen="0.2"

console_error_panic_hook = { version = "0.1.7", optional = true }


[dependencies.web-sys]
version = "0.3.69"
features = [ "console" ]